--- a/monorater/views/index.erb
+++ b/monorater/views/index.erb
@@ -5,7 +5,7 @@
 						<h2>Hey.</h2>
 					</header>
 					<p>Welcome to <strong>Monorater</strong>, a site made by 
-					<a href="http://html5up.net">Jackie and Lisandro</a>, a site made to find you movie, book, video, and GIF recommendations based on your search query.</p>
+					<a href="http://html5up.net">Jackie and Lisandro</a>, a site made to find you movie, book, games, food, and/or GIF recommendations based on your search query.</p>
 					<!--<div class="light_speed">-->
 					<!--    <canvas></canvas>-->
 
@@ -17,6 +17,7 @@
      <!--                     <i class="fa fa-twitter fa-lg"></i>-->
      <!--                   </div>-->
      <!--               </div>-->
+     
 					<footer>
 						<!--<a href="#one" class="button style2 down">More</a>-->
 						<!--<label class="search" for="inpt_search">-->
