--- a/monorater/views/result.erb
+++ b/monorater/views/result.erb
@@ -34,7 +34,7 @@
 		</div>
 		
 		<div class = "img-holder">
-			<img class = "gif_img"src = "<%= @movie_img %>" alt = "Error">
+			<img src = "<%= @movie_img %>" alt = "Error">
 		</div>
 			<a href="#three" class="button style2 down anchored">Next</a>
 	</section>
