--- a/monorater/public/css/style.css
+++ b/monorater/public/css/style.css
@@ -4439,10 +4439,10 @@ footer {
     margin-top: 5px;
 }
 .img-holder {
-    margin-right: 45%;
+    /*margin-right: 45%;*/
     /*margin-top: %;*/
     /*width: 32%;*/
     /*height: 100%;*/
-    
     float: right;
+    overflow: auto;
 }
