--- a/monorater/views/base.erb
+++ b/monorater/views/base.erb
@@ -16,16 +16,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="css/style.css" />
-		<link rel="stylesheet" href="css/font-awesome.min.css"/>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css"/>
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
-		<script src="public/js/script.js"></script>
-		<script src="public/js/jquery.min.js"></script>
-		<script src="public/js/jquery.poptrox.min.js"></script>
-		<script src="public/js/jquery.scrolly.min.js"></script>
-		<script src="public/js/jquery.scrollex.min.js"></script>
-		<script src="public/js/skel.min.js"></script>
-		<script src="public/js/util.js"></script>
 </head>
 <body>
   <div class="container">
@@ -52,6 +45,13 @@
   <!--<div class="container">-->
   <%=yield%> <!-- THIS IS WHERE OTHER PAGES' INFO GOES -->
   <!-- EVERYTHING BELOW THIS IS TEMPLATED -->
+  <script src="js/script.js"></script>
+		<script src="js/jquery.min.js"></script>
+		<script src="js/jquery.poptrox.min.js"></script>
+		<script src="js/jquery.scrolly.min.js"></script>
+		<script src="js/jquery.scrollex.min.js"></script>
+		<script src="js/skel.min.js"></script>
+		<script src="js/util.js"></script>
   <!--</div>-->
 </body>
 </html>
