--- a/monorater/views/index.erb
+++ b/monorater/views/index.erb
@@ -2,10 +2,10 @@
 			<section id="intro" class="main style1 dark fullscreen">
 				<div class="content container 75%">
 					<header>
-						<h2>Hey.</h2>
+						<h2>Welcome.</h2>
 					</header>
-					<p>Welcome to <strong>Monorater</strong>, a site made by 
-					<a href="http://html5up.net">Jackie and Lisandro</a>, a site made to find you movie, book, games, food, and/or GIF recommendations based on your search query.</p>
+					<p>This is <strong>Monorater</strong>, a site made by 
+					<a href="http://html5up.net">Jackie and Lisandro</a>, a site made to find you movie, book, games, food, video and/or GIF recommendations based on your search query.</p>
 					<!--<div class="light_speed">-->
 					<!--    <canvas></canvas>-->
 
