--- a/monorater/views/base.erb
+++ b/monorater/views/base.erb
@@ -3,7 +3,6 @@
 <html>
 <head>
   <title><%=@title%></title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <!-- Optional theme -->
@@ -45,13 +44,20 @@
   <!--<div class="container">-->
   <%=yield%> <!-- THIS IS WHERE OTHER PAGES' INFO GOES -->
   <!-- EVERYTHING BELOW THIS IS TEMPLATED -->
-  <script src="js/script.js"></script>
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  	<script src="js/script.js"></script>
 		<script src="js/jquery.min.js"></script>
 		<script src="js/jquery.poptrox.min.js"></script>
 		<script src="js/jquery.scrolly.min.js"></script>
 		<script src="js/jquery.scrollex.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/util.js"></script>
+		<script src="js/main.js"></script>
+		<script src="js/ie/htmlshiv.js"></script>
+		<script src="js/ie/respond.min.js"></script>
+		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>-->
+		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.poptrox/2.5.1/jquery.poptrox.min.js"></script>-->
+		<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/skel/3.0.1/skel.min.js"></script>-->
   <!--</div>-->
 </body>
 </html>
