--- a/monorater/views/result.erb
+++ b/monorater/views/result.erb
@@ -56,7 +56,7 @@
 				<!--width="560" height="315"-->
 				<div class="food-img-holder">
 					<!--width="560" height="315"-->
-					<a href = "https://www.youtube.com/watch?v=<%= @vid_id %>/"><img src = "<%= @vid_pic %>" width="560" height="315"></a>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/<%= @video_result%>" frameborder="0" allowfullscreen></iframe>
 				</div>
 		</div>
 		<a href="#four" class="button style2 down anchored">Next</a>
