--- a/monorater/views/result.erb
+++ b/monorater/views/result.erb
@@ -51,12 +51,12 @@
 				<h2>Youtube</h2>
 			<header>
 				<div class="txt-box">
-					<p>Your search has returned this </p>
+					<p>Your search has returned this Youtube video.</p>
 				</div>
 				<!--width="560" height="315"-->
 				<div class="food-img-holder">
 					<!--width="560" height="315"-->
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/<%= @video_result%>" frameborder="0" allowfullscreen></iframe>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/<%= @video_result %>?rel=0" frameborder="0" allowfullscreen></iframe>
 				</div>
 		</div>
 		<a href="#four" class="button style2 down anchored">Next</a>
