--- a/monorater/views/index.erb
+++ b/monorater/views/index.erb
@@ -4,8 +4,8 @@
 					<header>
 						<h2>Welcome.</h2>
 					</header>
-					<p>This is <strong>Monorater</strong>, a site made by 
-					<a href="http://html5up.net">Jackie and Lisandro</a>, a site made to find you movie, book, games, food, video and/or GIF recommendations based on your search query.</p>
+					<p>This is <strong>Monorater</strong> 
+					.A site made to find you movie, book, games, food, video and/or GIF recommendations based on your search query.</p>
 					<!--<div class="light_speed">-->
 					<!--    <canvas></canvas>-->
 
